# robotic_arm

.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.sh
install/robotic_arm/lib/robotic_arm/: arm_node
install/robotic_arm/share/ament_index/resource_index/package_run_dependencies/: robotic_arm
install/robotic_arm/share/ament_index/resource_index/parent_prefix_path/: robotic_arm
install/robotic_arm/share/robotic_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robotic_arm/share/robotic_arm/cmake/: robotic_armConfig-version.cmake  robotic_armConfig.cmake
install/robotic_arm/share/robotic_arm/environment/: ament_prefix_path.dsv  path.dsv
journal/: Matrix_mapping_basic.cpp  Rodrigues_test1.cpp  dh_practice1.cpp  dhp1  eigen_test  eigen_use.cpp  kinematics_utils.hpp  rod_test  rodri_test  rodrigues.cpp  tr_test
log/: latest_build
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/include/: kinematics_utils.hpp
src/robotic_arm/src/: arm_node.cpp
